BUG: Fix footer back image not showing

--- a/asset/style.css
+++ b/asset/style.css
@@ -167,7 +167,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 2.5rem;
-  background-image: url(/asset/images/rock-banner.jpeg);
+  background-image: url(../asset/images/rock-banner.jpeg);
   padding: 1rem 2rem;
   font-size: 20px;
   margin-top: auto;
